# firefinder

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
firefinder/: __init__.py  detector.py  events.py  preprocess.py
tests/: test_end_to_end.py
